fix Java 8 incompatibilities in TableKvScanITCase
Replace List.of() with Collections.singletonList() and var with
explicit BatchScanner type to restore Java 8 compatibility.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>